1.5.3:
 * You can now create links when using Safari or Chrome web browsers.

1.5.2: October 1, 2008
 * Leading/trailing spaces in note titles are now ignored when making links
   to such notes. This means that creating a link titled "my note" to a note
   called "my note  " now works properly.
 * Leading/trailing spaces and newlines in note titles and contents are now
   stripped out when exporting to CSV.
 * Fixed a bug in which clicking the "export" link when the current note was
   unsaved did not open the export pulldown.
 * Changed the warning about Safari/Chrome/Opera incompatibility to be an
   in-page message instead of a popup alert so as to be slightly less
   obnoxious.

1.5.1: September 28, 2008
 * Implemented CSV exporting, so now you can export all of your notes to a
   CSV spreadsheet file. This currently doesn't include revision history or
   attached files.
 * Improved CSV importing so you can export a CSV of your notes from one
   Luminotes installation and import that CSV into a different Luminotes
   installation.
 * Fixed a bug in which the image preview page didn't correctly handle
   filenames containing special characters.

1.5.0: September 12, 2008
 * Initial release of Luminotes Desktop!
 * Fixed a Luminotes Desktop Internet Explorer bug in which note links within
   the "download as html" document pointed to notes in the local Luminotes
   installation instead of notes within the stand-alone document.
 * Fixed a bug in which Luminotes Desktop file attachment did not always work
   due to incorrect upload progress reporting.
 * In the revision changes pulldown, no longer showing "by desktopuser" in
   Luminotes Desktop.
 * Added a Luminotes Desktop download page.
 * Added code for supporting product download access.

1.5.0 beta 1: August 27, 2008
 * Completed the Luminotes Desktop Windows installer.
 * Improved logging, so tracebacks in production and desktop mode actually go