@@ -1,5 +1,8 @@
 1.5.3:
- * You can now create links when using Safari or Chrome web browsers.
+ * Safari and Chrome web browsers are now supported (beta):
+   * You can now create and end links.
+   * Underline and strikethrough now work.
+   *
 
 1.5.2: October 1, 2008
  * Leading/trailing spaces in note titles are now ignored when making links
